--- a/example/full-compose.yaml
+++ b/example/full-compose.yaml
@@ -25,6 +25,6 @@ services:
     ports:
       - 8080:8080
     environment:
-      - UPDATE_URL=http://localhost:9091/graph
+      - UPDATE_URL=http://ip172-18-0-12-bo2dr93jagq000erelf0-9091.direct.labs.play-with-docker.com/graph
       - INTERVAL=10000
       - MAX_REPLAY_OFFSET=43200
